# yoink

./: .gitignore  .yoinkconfig.json  README.md  pyproject.toml  render.yaml  yoinkers.md
.github/workflows/: ci.yml  release.yml
docs/: api_guide.md  cli_guide.md  token_reduction_learnings.md
src/yoink/api/: __init__.py  main.py  routes.py
src/yoink/cli/: __init__.py  main.py  tui.py
src/yoink/core/: __init__.py  packer.py  scanner.py  shield.py  shredder.py  tokenizer.py  visualizer.py
tests/test_api/: __init__.py  test_routes.py
tests/test_cli/: __init__.py  test_main.py  test_tui.py
tests/test_core/: __init__.py  test_scanner.py  test_shield.py  test_shredder.py  test_tokenizer.py
