[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yoinky"
version = "1.2.0"
description = "Pack your codebase into a single markdown file for LLM context, with comment stripping, secret masking, and dependency trees."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU AGPLv3" }
authors = [
    { name = "Asif Sayyed", email = "asifdotexe@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathspec>=0.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
yoink = "yoink.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yoink"]
